basic trip management and infrastructure
